--- a/.github/workflows/mavenpublish.yml
+++ b/.github/workflows/mavenpublish.yml
@@ -12,11 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - uses: actions/setup-java@v1
       with:
         java-version: 1.8
     - run: mvn -B package
-    - run: mvn -B deploy -X -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/org-crac/org.crac
+    - run: cat ~/.m2/settings.xml
+    - run: mvn -B deploy -X -DaltDeploymentRepository=github::https://maven.pkg.github.com/org-crac/org.crac
       env:
         GITHUB_TOKEN: ${{ github.GITHUB_TOKEN }}
