--- a/.github/workflows/mavenpublish.yml
+++ b/.github/workflows/mavenpublish.yml
@@ -16,7 +16,6 @@ jobs:
       with:
         java-version: 1.8
     - run: mvn -B package
-    - run: cat ~/.m2/settings.xml
-    - run: mvn -B deploy -X -e -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/org-crac/org.crac
+    - run: mvn -B deploy -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/org-crac/org.crac
       env:
-        GITHUB_TOKEN: ${{ github.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
