--- a/.github/workflows/mavenpublish.yml
+++ b/.github/workflows/mavenpublish.yml
@@ -16,6 +16,6 @@ jobs:
       with:
         java-version: 1.8
     - run: mvn -B package
-    - run: mvn -B deploy -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/org-crac/org.crac
+    - run: mvn -B deploy -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/crac/org.crac
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
