--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.github.crac</groupId>
-  <artifactId>org-crac</artifactId>
+  <groupId>org.crac</groupId>
+  <artifactId>crac</artifactId>
   <version>0.1.3</version>
   <packaging>jar</packaging>
 
-  <name>org-crac</name>
+  <name>crac</name>
   <description>A wrapper for OpenJDK CRaC API to build and run on any JDK</description>
   <url>https://github.com/crac/org.crac</url>
 
