--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,21 @@
   <dependencies>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>3.0.1</version>
+        <configuration>
+          <tagNameFormat>@{project.version}</tagNameFormat>
+	  <scmCommentPrefix>[release]</scmCommentPrefix>
+	  <pushChanges>false</pushChanges>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <profiles>
     <profile>
       <id>release</id>
