--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>org.crac</groupId>
   <artifactId>crac</artifactId>
-  <version>1.4.1-SNAPSHOT</version>
+  <version>1.5.0</version>
   <packaging>jar</packaging>
 
   <name>crac</name>
@@ -30,7 +30,7 @@
     <connection>scm:git:git://github.com/CRaC/org.crac.git</connection>
     <developerConnection>scm:git:git://github.com/CRaC/org.crac.git</developerConnection>
     <url>http://github.com/CRaC/org.crac/tree/master</url>
-    <tag>HEAD</tag>
+    <tag>1.5.0</tag>
   </scm>
 
   <distributionManagement>
